fix: remove legacy node size vars, fix Modal portal popup wrapping

--- a/apps/architect-desktop/src/styles/components/form/fields/_entity-select.scss
+++ b/apps/architect-desktop/src/styles/components/form/fields/_entity-select.scss
@@ -36,8 +36,6 @@ $component-name: 'form-fields-entity-select';
   }
 
   &--nodes {
-    --base-node-size: 7rem;
-
     .preview-node {
       &--clickable {
         &:not(.preview-node--selected) {
